<resources>
    <string name="app_name" translatable="false">BeWithYouth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="white_flag">White Flag</string>
    <string name="add_post">Add Post</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="address_pro">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dob_pro">DOB</string>
    <string name="add_forum">Add Forum</string>
    <string name="add_request">Add Request</string>
    <string name="other">Other</string>
    <string name="educational">Educational</string>
    <string name="f_amp_b"><![CDATA[F&B]]></string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit Profile</string>
    <string name="username">Username</string>
    <string name="username_pro">Username : %s</string>
    <string name="email_address_pro">Email</string>
    <string name="phone_pro">Phone</string>
    <string name="uid_pro">UID : %s</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="remove">REMOVE</string>
    <string name="done">DONE</string>
    <string name="n_a">N/A</string>
    <string name="received">RECEIVED</string>
    <string name="info">INFO</string>
    <string name="donate">DONATE</string>
    <string name="descText">Your donor has donated your need(s)!</string>
    <string name="noAddressFound">No address found!</string>
    <string name="nullAddressMsg">The user doesn\'t provide address</string>
    <string name="donated">Donated</string>
    <string name="close">Close</string>
    <string name="contactForInfo">Contact recipient for more information</string>
    <string name="recipientInfo">Recipient\'s Information</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="rmReq">Remove Request</string>
    <string name="reqFulfilled">Request Fulfilled</string>
    <string name="finishConfirmation">Are you sure to finish this request?</string>
    <string name="rmConfirmation">Are you sure to remove?</string>
    <string name="otherAccpeted">The request is accepted by other</string>
    <string name="pendForConfirmation">Pending for confirmation by Receiver</string>
    <string name="share_pref" translatable="false">SHARE_PREF</string>
    <string name="loginSuccess">Login Successful</string>
    <string name="incorrectLoginMsg">Incorrect Email or Password</string>
    <string name="requireFillIn">Please fill in all the fields</string>
    <string name="resetPassword">Reset Password</string>
    <string name="enterEmailResetPswd">Enter email to reset password</string>
    <string name="chkEmailPswd">Check your email to reset password</string>
    <string name="emailNotExist">Email not exist</string>
    <string name="save">Save</string>
    <string name="selectPhoto">Select Photo</string>
    <string name="getPhotoMethod">Please choose a method to upload photo.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="uploadSuccess">Upload Successful</string>
    <string name="uploadFail">Upload Fail</string>
    <string name="registerSuccess">Registered successful</string>
    <string name="underage">Underage</string>
    <string name="pswdValidation">Password must contains 8 characters with at least one special character, one capital letter and one small letter</string>
    <string name="pswdNotMatch">Password does not match</string>
    <string name="phoneInvalid">Phone Invalid</string>
    <string name="phoneExist">Phone existed</string>
    <string name="emailInvalid">Invalid email address</string>
    <string name="emailEixst">Email existed</string>
    <string name="usernameExist">Username existed</string>
    <string name="wrgOldPswd">Wrong Old Password</string>
    <string name="nPswdNotMatch">New Password not match</string>
    <string name="OpswdSameNpswd">Old Password Same With New Password</string>
    <string name="pswdUpdateSuccess">Password update successfully</string>
    <string name="updateSuccess">Update Successful</string>
    <string name="storageErrMsg" translatable="false">FirebaseStorage API Error</string>
    <string name="DOBnoEdit">DOB is not editable!</string>
    <string name="usernameNoEdit">Username is not editable!</string>
    <string name="UIDNoEdit">UID is not editable!</string>
    <string name="donateConfirmation">Are you sure to donate?</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="like">LIKE</string>
    <string name="comment">COMMENT</string>
    <string name="writeComment">Write your comment</string>
    <string name="showMore">More...</string>
    <string name="showLess">Less...</string>
    <string name="write_comment_here">Write Comment Here...</string>
    <string name="send">SEND</string>
    <string name="upload_video">Upload Video</string>
    <string name="noNetwork">No Network Connection</string>
    <string name="nothing_here">Nothing Here...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completeBtn">Complete</string>
    <string name="timesUpText">Time\'s Up !</string>
    <string name="quizCompletionText">You have completed the quiz!</string>
    <string name="contentDescription">TODO</string>
    <string name="titleContentDescription">Title</string>
    <string name="buttonContentDescription">button</string>
    <string name="durationContentDescription">Duration</string>
    <string name="gratitudeContentDescription">Gratitude Message</string>
    <string name="pointsContentDescription">Points</string>
    <string name="leaderboardContentDescription">Leaderboard</string>
    <string name="incorrect_answers">Incorrect Answers :</string>
    <string name="correct_answers">Correct Answers :</string>
    <string name="back_to_quiz_menu">Back to Quiz Menu</string>
    <string name="name_contentDescription">Elon Musk</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="relogin_message">Please login again(Email/Password changed)</string>
    <string name="your_current_score_0">Your current score : 0</string>

</resources>