<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etUsername"
        android:scaleType="centerInside" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        android:inputType="text"
        android:drawableRight="@drawable/name_field_icon" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/mail_field_icon"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPswdOnOff"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_input"
            android:hint="@string/password"
            android:padding="10dp"
            android:textColorHint="#757575"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConPswdOnOff"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPswdOnOff"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/etConPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_input"
            android:hint="@string/confirm_password"
            android:padding="10dp"
            android:textColorHint="#757575"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:hint="@string/phone_number"
        android:padding="10dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConPswdOnOff"
        android:inputType="phone"
        android:drawableEnd="@drawable/phone_field_icon" />

    <EditText
        android:id="@+id/etDob"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:hint="@string/date_of_birth"
        android:padding="10dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        android:inputType="date"
        android:drawableEnd="@drawable/date_field_icon"
        android:clickable="true"
        android:focusable="false"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rectangle_button_blue"
        android:textColor="@color/white"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/etDob" />

    <View
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="50dp"
        app:layout_constraintRight_toLeftOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginEnd="50dp"
        app:layout_constraintLeft_toRightOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rectangle_button_white"
        android:text="@string/login"
        android:textColor="@color/theme_blue"
        android:elevation="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>