<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvOldPswd"
        android:layout_width="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvOldPswd"
        app:layout_constraintTop_toTopOf="@id/tvOldPswd"
        app:layout_constraintBottom_toBottomOf="@id/tvOldPswd"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etOldPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvNewPswd"
        android:layout_width="100dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/tvOldPswd"
        app:layout_constraintStart_toStartOf="@id/tvOldPswd"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvNewPswd"
        app:layout_constraintTop_toTopOf="@id/tvNewPswd"
        app:layout_constraintBottom_toBottomOf="@id/tvNewPswd"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etNewPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvConNewPswd"
        android:layout_width="100dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password"
        app:layout_constraintTop_toBottomOf="@id/tvNewPswd"
        app:layout_constraintStart_toStartOf="@id/tvNewPswd"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvConNewPswd"
        app:layout_constraintTop_toTopOf="@id/tvConNewPswd"
        app:layout_constraintBottom_toBottomOf="@id/tvConNewPswd"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etConNewPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>