<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardLeaderParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/theme_blue"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardLayoutLeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBadgeIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/contentDescription" />

            <TextView
                android:id="@+id/tvLeaderPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/theme_blue"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivBadgeIcon"
                app:layout_constraintStart_toEndOf="@+id/ivBadgeIcon"
                app:layout_constraintTop_toTopOf="@+id/ivBadgeIcon"
                app:layout_constraintVertical_bias="0.454" />

            <TextView
                android:id="@+id/tvLeaderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="88dp"
                android:padding="8dp"
                android:text="@string/name_contentDescription"
                android:textColor="@color/theme_blue"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvLeaderPosition"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLeaderPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/pointsContentDescription"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/theme_blue"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>